--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,4 +4,8 @@
 // VARIB
 @use '/src/sass/base/variables.scss' as *;
 // @use '/src/sass/pxtorem.scss' as *;
+//base
 @use '/src/sass/base/basic.scss';
+//blocks
+@use '/src/sass/blocks/promo.scss';
+@use '/src/sass/blocks/header.scss';
