--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -1,19 +1,23 @@
-@use '/src/sass/base/variables.scss' as *;
+@use '/src/sass/base/variables.scss'as *;
 
 .header {
     display: flex;
     justify-content: space-between;
+
     &__logo {
         width: 100px;
         height: 100px;
     }
+
     &__icons {
         display: flex;
         align-items: flex-start;
         gap: 15px;
+
         a {
             display: block;
             color: $dark;
+
             span {
                 display: block;
                 height: 20px;
@@ -25,9 +29,11 @@
 
 .burger {
     display: flex;
+    height: 23px;
     flex-direction: column;
     row-gap: 10px;
     padding-right: 35px;
+
     span {
         display: block;
         width: 20px;
