--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,3 +5,5 @@
 @use '/src/sass/base/basic.scss';
 @use '/src/sass/blocks/promo.scss';
 @use '/src/sass/blocks/header.scss';
+@use '/src/sass/ui/titles.scss';
+@use '/src/sass/base/mixins.scss';
