--- a/src/sass/base/mixins.scss
+++ b/src/sass/base/mixins.scss
@@ -4,5 +4,7 @@
     font-weight: 500;
     text-transform: uppercase;
     font-style: normal;
+    line-height: normal;
+    text-align: center;
     color: $dark;
 }
