--- a/src/sass/base/mixins.scss
+++ b/src/sass/base/mixins.scss
@@ -8,3 +8,16 @@
     text-align: center;
     color: $dark;
 }
+
+@mixin button {
+    display: block;
+    border: 1px solid $dark;
+    border-radius: 2px;
+    text-align: center;
+    color: $dark;
+    font-weight: 400;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase;
+    background-color: transparent;
+}
