--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -12,4 +12,8 @@
         height: 377px;
         box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
     }
+
+    &__btn {
+        margin: 18px auto 0 auto;
+    }
 }
