--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,3 +7,4 @@
 @use '/src/sass/blocks/header.scss';
 @use '/src/sass/ui/titles.scss';
 @use '/src/sass/base/mixins.scss';
+@use '/src/sass/ui/buttons.scss';
