--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -1,13 +1,16 @@
 .promo {
     padding-top: 50px;
-
-    &__title {
+    &__wrapper {
         margin-block-start: 50px;
+    }
+    &__title {
         padding-inline: 5px;
     }
-
+    &__cta {
+        margin-top: 40px;
+    }
     &__img {
-        margin: 40px auto 0 auto;
+        margin: 0 auto;
         width: 270px;
         height: 377px;
         box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
@@ -16,4 +19,26 @@
     &__btn {
         margin: 18px auto 0 auto;
     }
+}
+
+@media screen and (min-width: 768px) {
+    .promo {
+        &__wrapper {
+            display: flex;
+            justify-content: space-between;
+        }
+        &__cta {
+            margin-top: 0;
+        }
+        &__img {
+            width: 230px;
+            height: 321px;
+        }
+        &__title {
+            padding-inline: 0;
+            padding-top: 250px;
+            padding-left: 71px;
+            text-align: left;
+        }
+    } 
 }
