--- a/src/sass/base/basic.scss
+++ b/src/sass/base/basic.scss
@@ -68,3 +68,9 @@ body {
         margin: 0 auto;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
+}
