--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -1,5 +1,6 @@
 .promo {
     padding-top: 50px;
+    position: relative;
     &__wrapper {
         margin-block-start: 50px;
     }
@@ -19,7 +20,11 @@
     &__btn {
         margin: 18px auto 0 auto;
     }
+    &__potter {
+        display: none;
+    }
 }
+
 
 @media screen and (min-width: 768px) {
     .promo {
@@ -41,4 +46,20 @@
             text-align: left;
         }
     } 
+}
+
+@media screen and (min-width: 1200px) {
+    .promo {
+        &__potter {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 460px;
+            height: 633px;
+        }
+        &__title {
+            padding-left: 571px;
+        }
+    }
 }
