--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -63,3 +63,19 @@
         }
     }
 }
+
+@media screen and (min-width: 1920px) {
+    .promo {
+        padding-top: 40px;
+        &__wrapper {
+            margin-top: 79px;
+        }
+        &__img {
+            width: 330px;
+            height: 460px;
+        }
+        &__btn {
+            margin: 50px auto 0 auto;
+        }
+    }
+}
