--- a/src/sass/base/mixins.scss
+++ b/src/sass/base/mixins.scss
@@ -11,6 +11,7 @@
 
 @mixin button {
     display: block;
+    padding: 0 10px;
     border: 1px solid $dark;
     border-radius: 2px;
     text-align: center;
