--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -20,6 +20,7 @@
             box-shadow: inset 0 0 10px 1px rgba(0, 0, 0, 0.4);
             background: rgba(217, 217, 217, 0.1);
             color: $dark;
+            border: none;
             transition: all 0.5s;
         }
     }
