--- a/src/sass/ui/titles.scss
+++ b/src/sass/ui/titles.scss
@@ -7,3 +7,9 @@
     font-weight: 400;
     font-size: 24px;
 }
+
+@media screen and (min-width: 1920px) {
+    .title-h1-italic {
+        font-size: 32px;
+    }
+}
