--- a/src/sass/blocks/activities.scss
+++ b/src/sass/blocks/activities.scss
@@ -1,2 +1,26 @@
 @use '/src/sass/base/variables.scss'as *;
 @use '/src/sass/base/mixins.scss'as *;
+
+.activities {
+    padding-top: 60px;
+    &__wrapper {
+        margin-top: 20px;
+        row-gap: 40px;
+    }
+    &__img {
+        margin-top: 40px;
+        box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
+    }
+    &__text {
+        margin-top: 20px;
+        font-weight: 400;
+        font-size: 16px;
+        color: $dark;
+        line-height: normal;
+        font-style: normal;
+        &_colored {
+            font-weight: 500;
+            color: $ceramic;
+        }
+    }
+}
