--- a/src/sass/blocks/activities.scss
+++ b/src/sass/blocks/activities.scss
@@ -8,6 +8,7 @@
         row-gap: 40px;
     }
     &__img {
+        width: 100%;
         margin-top: 40px;
         box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
     }
@@ -22,5 +23,37 @@
             font-weight: 500;
             color: $ceramic;
         }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .activities {
+        padding: 60px 95px 0 95px;
+        &__wrapper {
+            margin-top: 40px;
+        }
+        &__text {
+            margin-top: 25px;
+        }
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .activities {
+        &__col {
+            padding: 0 10px;
+        } 
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .activities {
+        padding: 60px 0 0 0;
+        &__wrapper {
+            margin-top: 80px;
+        }
+        &__col {
+            padding: 0 10px;
+        } 
     }
 }
