--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,4 @@
 @use '/src/sass/base/mixins.scss';
 @use '/src/sass/ui/buttons.scss';
 @use '/src/sass/blocks/activities.scss';
+@use '/src/sass/blocks/touch.scss';
