--- a/src/sass/blocks/touch.scss
+++ b/src/sass/blocks/touch.scss
@@ -19,6 +19,9 @@
         font-size: 14px;
         line-height: 200%;
         color: $dark;
+        &:nth-child(2) {
+            margin-top: 8px;
+        }
     }
     &__input {
         width: 100%;
@@ -36,6 +39,40 @@
             color: $ui-disabled;
             font-size: 14px;
         }
+    }
+    &__textarea {
+        width: 100%;
+        height: 132px;
+        border: 1px solid #e2e1e5;
+        border-radius: 2px;
+        padding: 10px 15px;
+        color: $dark;
+        background: #fff;
+        resize: none;
+        &:focus {
+            border: none;
+            outline: 1px solid $dark;
+        }
+        &::placeholder {
+            color: $ui-disabled;
+            font-size: 14px;
+        }
+    }
+    &__check-block {
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+        a {
+            color: #a22dc6;
+            text-decoration: none;
+            margin-left: 2px;
+        }
+    }
+    &__checkbox {
+        // vertical-align: middle;
+        margin-right: 15px;
+        width: 15px;
+        height: 15px;
     }
 }
 
