--- a/src/sass/blocks/touch.scss
+++ b/src/sass/blocks/touch.scss
@@ -69,10 +69,12 @@
         }
     }
     &__checkbox {
-        // vertical-align: middle;
         margin-right: 15px;
         width: 15px;
         height: 15px;
+    }
+    &__btn {
+        margin-top: 20px;
     }
 }
 
