--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -8,6 +8,17 @@
     font-size: 20px;
 }
 
+.btn-send {
+    @include button;
+    width: 220px;
+    height: 40px;
+    font-size: 16px;
+    &:focus {
+        outline: 1px solid $ceramic;
+        border: 1px solid $ceramic;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .btn-default {
         transition: all 0.5s;
@@ -23,6 +34,20 @@
             border: none;
             transition: all 0.5s;
         }
+    }
+    .btn-send {
+        &:active {
+            outline: 1px solid $ceramic;
+            border: 1px solid $ceramic;
+        }
+        &:hover {
+            color:$ceramic;
+            border: 1px solid $ceramic;
+        }
+    }
+    :disabled {
+        color: $ui-disabled;
+        border: 1px solid $ui-disabled;
     }
 }
 
