--- a/src/sass/blocks/touch.scss
+++ b/src/sass/blocks/touch.scss
@@ -4,6 +4,7 @@
 	padding-top: 60px;
 	&__wrapper {
 		margin-top: 60px;
+        position: relative;
 	}
 	&__img {
 		display: none;
@@ -40,6 +41,9 @@
             font-size: 14px;
         }
     }
+    &__img-vase {
+        display: none;
+    }
     &__textarea {
         width: 100%;
         height: 132px;
@@ -75,6 +79,15 @@
     }
     &__btn {
         margin-top: 20px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .touch__img-vase {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 100%;
     }
 }
 
