--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,4 @@
 @use '/src/sass/ui/buttons.scss';
 @use '/src/sass/blocks/activities.scss';
 @use '/src/sass/blocks/touch.scss';
+@use '/src/sass/blocks/works.scss';
