--- a/src/sass/blocks/works.scss
+++ b/src/sass/blocks/works.scss
@@ -4,4 +4,13 @@
     &__slider {
         margin-top: 40px;
     }
+
+    .swiper-slide img {
+        width: 100%;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: none;
+    }
 }
