--- a/src/sass/blocks/works.scss
+++ b/src/sass/blocks/works.scss
@@ -1,5 +1,12 @@
+@use '/src/sass/base/variables.scss'as *;
+
 .works {
     padding-top: 60px;
+    padding-bottom: 100px;
+
+    &__wrapper {
+        position: relative;
+    }
 
     &__slider {
         margin-top: 40px;
@@ -9,8 +16,97 @@
         width: 100%;
     }
 
-    .swiper-button-prev,
-    .swiper-button-next {
+    .works__slider-nav {
         display: none;
+    }
+
+    .swiper-pagination {
+        bottom: -35px;
+    }
+
+    .swiper-pagination-bullet {
+        height: 10px;
+        width: 10px;
+        border-radius: 0;
+        background-color: $dark;
+        opacity: 1;
+        -webkit-tap-highlight-color: transparent;
+
+    }
+
+    .swiper-pagination-bullet-active {
+        background-color: $ceramic;
+        transition: all 0.3s;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .works {
+        .swiper-slide img {
+            width: 400px;
+            margin: 0 auto;
+            display: block;
+        }
+
+        &__slider {
+            margin-top: 45px;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .works {
+        &__slider {
+            margin: 80px 40px 0 40px;
+        }
+
+        .swiper-slide img {
+            width: 100%;
+            margin: 0;
+        }
+
+        .works__slider-nav {
+            position: absolute;
+            top: 50%;
+            display: block;
+            font-size: 21px;
+            background-color: transparent;
+            border: none;
+            padding: 0;
+            transform: translateY(-50%);
+
+            &:before {
+                width: auto;
+                margin: 0;
+            }
+        }
+
+        .icon-left-open {
+            left: 13px;
+        }
+
+        .icon-right-open {
+            right: 13px;
+        }
+
+        .swiper-pagination {
+            bottom: -25px;
+        }
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    .works {
+        &__slider {
+            margin: 80px 85px 0 85px;
+        }
+
+        .icon-left-open {
+            left: 40px;
+        }
+
+        .icon-right-open {
+            right: 40px;
+        }
     }
 }
