--- a/src/sass/blocks/touch.scss
+++ b/src/sass/blocks/touch.scss
@@ -1,29 +1,35 @@
-@use '/src/sass/base/variables.scss' as *;
+@use '/src/sass/base/variables.scss'as *;
 
 .touch {
-	padding-top: 60px;
-	&__wrapper {
-		margin-top: 60px;
+    padding-top: 60px;
+
+    &__wrapper {
+        margin-top: 60px;
         position: relative;
-	}
-	&__img {
-		display: none;
-	}
+    }
+
+    &__img {
+        display: none;
+    }
+
     &__fieldset {
         border: none;
         padding: 0;
         margin: 0;
     }
+
     &__label {
         display: block;
         font-weight: 400;
         font-size: 14px;
         line-height: 200%;
         color: $dark;
+
         &:nth-child(2) {
             margin-top: 8px;
         }
     }
+
     &__input {
         width: 100%;
         height: 48px;
@@ -32,18 +38,22 @@
         padding: 10px 15px;
         color: $dark;
         background: #fff;
+
         &:focus {
             border: none;
             outline: 1px solid $dark;
         }
+
         &::placeholder {
             color: $ui-disabled;
             font-size: 14px;
         }
     }
+
     &__img-vase {
         display: none;
     }
+
     &__textarea {
         width: 100%;
         height: 132px;
@@ -53,30 +63,36 @@
         color: $dark;
         background: #fff;
         resize: none;
+
         &:focus {
             border: none;
             outline: 1px solid $dark;
         }
+
         &::placeholder {
             color: $ui-disabled;
             font-size: 14px;
         }
     }
+
     &__check-block {
         display: flex;
         align-items: center;
         margin-top: 20px;
+
         a {
             color: #a22dc6;
             text-decoration: none;
             margin-left: 2px;
         }
     }
+
     &__checkbox {
         margin-right: 15px;
         width: 15px;
         height: 15px;
     }
+
     &__btn {
         margin-top: 20px;
     }
@@ -92,14 +108,15 @@
 }
 
 @media screen and (min-width: 1200px) {
-	.touch {
-		&__img {
-			display: block;
-			width: 550px;
-			height: 342px;
-			object-fit: cover;
-			box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
-		}
+    .touch {
+        &__img {
+            display: block;
+            width: 550px;
+            height: 342px;
+            object-fit: cover;
+            box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+        }
+
         &__input {
             width: 100%;
             height: 48px;
@@ -107,19 +124,28 @@
             border-radius: 2px;
             padding: 10px 15px;
             background: #fff;
+
             &:hover {
                 border: none;
                 outline: 1px solid $dark;
             }
         }
-	}
+    }
+}
+
+@media screen and (min-width:1280px) {
+    .touch {
+        .pl {
+            padding-left: 100px;
+        }
+    }
 }
 
 @media screen and (min-width: 1920px) {
-	.touch {
-		&__img {
-			width: 100%;
-			height: 356px;
-		}
-	}
+    .touch {
+        &__img {
+            width: 100%;
+            height: 356px;
+        }
+    }
 }
