--- a/src/sass/blocks/works.scss
+++ b/src/sass/blocks/works.scss
@@ -2,7 +2,6 @@
 
 .works {
     padding-top: 60px;
-    padding-bottom: 100px;
 
     &__wrapper {
         position: relative;
@@ -74,6 +73,7 @@
             border: none;
             padding: 0;
             transform: translateY(-50%);
+            cursor: pointer;
 
             &:before {
                 width: auto;
@@ -97,6 +97,8 @@
 
 @media screen and (min-width: 1920px) {
     .works {
+        padding-top: 100px;
+
         &__slider {
             margin: 80px 85px 0 85px;
         }
