--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -27,8 +27,67 @@
             }
         }
     }
+
     &__nav {
         display: none;
+    }
+
+    &__menu {
+        padding: 50px 10px;
+        position: fixed;
+        top: 0;
+        left: -100vw;
+        width: 100vw;
+        height: 100vh;
+        background-color: $light;
+        transition: all 3s;
+        opacity: 0;
+
+        &_active {
+            transform: translateX(100%);
+            opacity: 1;
+        }
+
+        &-close {
+            width: 20px;
+            height: 20px;
+
+            span {
+                display: block;
+                width: 20px;
+                height: 1px;
+                background-color: $dark;
+
+                &:nth-child(1) {
+                    transform: translateY(8px) rotate(45deg);
+                }
+
+                &:nth-child(2) {
+                    transform: translateY(8px) rotate(-45deg);
+                }
+            }
+        }
+
+        &-nav {
+            margin-top: 50px;
+            padding-left: 14px;
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+                padding: 0;
+                list-style-type: none;
+            }
+        }
+
+        &-link {
+            font-weight: 400;
+            font-size: 20px;
+            text-transform: uppercase;
+            color: $dark;
+            text-decoration: none;
+        }
     }
 }
 
@@ -46,21 +105,25 @@
         background-color: $dark;
     }
 }
+
 @media screen and (min-width: 768px) {
     .header {
         &__nav {
             display: block;
             margin-top: 20px;
+
             ul {
                 display: flex;
                 padding: 0;
                 justify-content: center;
                 gap: 30px;
+
                 li {
                     list-style-type: none;
                 }
             }
         }
+
         &__link {
             font-weight: 400;
             font-size: 20px;
@@ -69,6 +132,7 @@
             color: $dark;
         }
     }
+
     .burger {
         visibility: hidden;
     }
@@ -80,8 +144,10 @@
             width: 150px;
             height: 151px;
         }
+
         &__nav {
             margin-top: 36px;
+
             ul {
                 gap: 60px;
             }
