--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -18,6 +18,7 @@
     }
 
     &__tab {
+        position: relative;
         border: none;
         background: transparent;
         font-weight: 500;
@@ -25,5 +26,14 @@
         text-transform: uppercase;
         color: #000;
         padding: 0;
+
+        &_active::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background: #000;
+            bottom: -1px;
+        }
     }
 }
