--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,3 +13,4 @@
 @use '/src/sass/blocks/works.scss';
 @use '/src/sass/blocks/footer.scss';
 @use '/src/sass/blocks/catalog.scss';
+@use '/src/sass/blocks/blog.scss';
