--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -13,20 +13,30 @@
     width: 220px;
     height: 40px;
     font-size: 16px;
+
     &:focus {
         outline: 1px solid $ceramic;
         border: 1px solid $ceramic;
     }
 }
 
+.btn-read {
+    @include button;
+    width: 132px;
+    height: 142px;
+    color: $dark;
+}
+
 @media screen and (min-width: 1200px) {
     .btn-default {
         transition: all 0.5s;
+
         &:hover {
             color: $light;
             background-color: $dark;
             transition: all 0.5s;
         }
+
         &:active {
             box-shadow: inset 0 0 10px 1px rgba(0, 0, 0, 0.4);
             background: rgba(217, 217, 217, 0.1);
@@ -35,20 +45,24 @@
             transition: all 0.5s;
         }
     }
+
     .btn-send {
         &:active {
             outline: 1px solid $ceramic;
             border: 1px solid $ceramic;
         }
+
         &:hover {
-            color:$ceramic;
+            color: $ceramic;
             border: 1px solid $ceramic;
         }
+
+        &:disabled {
+            color: $ui-disabled;
+            border: 1px solid $ui-disabled;
+        }
     }
-    :disabled {
-        color: $ui-disabled;
-        border: 1px solid $ui-disabled;
-    }
+
 }
 
 @media screen and (min-width: 1920px) {
