--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -8,6 +8,20 @@
     font-size: 20px;
 }
 
+.btn-submit {
+    @include button;
+    width: 90px;
+    height: 40px;
+    font-size: 16px;
+    border: 1px solid $light;
+    color: $light;
+
+    &:disabled {
+        color: $ui-disabled;
+        border: 1px solid $ui-disabled;
+    }
+}
+
 .btn-send {
     @include button;
     width: 220px;
@@ -24,6 +38,7 @@
     @include button;
     width: 132px;
     height: 142px;
+    font-size: 14px;
     color: $dark;
 }
 
@@ -45,6 +60,8 @@
             transition: all 0.5s;
         }
     }
+
+
 
     .btn-send {
         &:active {
