--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -36,10 +36,15 @@
 
 .btn-read {
     @include button;
-    width: 132px;
-    height: 142px;
+    width: 145px;
+    height: 32px;
     font-size: 14px;
     color: $dark;
+
+    &:focus {
+        outline: 1px solid $ceramic;
+        border: 1px solid $ceramic;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -61,6 +66,17 @@
         }
     }
 
+    .btn-read {
+        &:active {
+            outline: 1px solid $ceramic;
+            border: 1px solid $ceramic;
+        }
+
+        &:hover {
+            color: $ceramic;
+            border: 1px solid $ceramic;
+        }
+    }
 
 
     .btn-send {
