--- a/src/sass/base/mixins.scss
+++ b/src/sass/base/mixins.scss
@@ -23,3 +23,24 @@
     background-color: transparent;
     cursor: pointer;
 }
+
+@mixin angle-decoration {
+
+    &::after,
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    &::after {
+        width: 1px;
+        height: 200px;
+    }
+
+    &::before {
+        width: 1px;
+        height: 200px;
+    }
+}
