--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,3 +16,4 @@
 @use '/src/sass/blocks/blog.scss';
 @use "/src/sass/blocks/about.scss";
 @use '/src/sass/blocks/findus.scss';
+@use '/src/sass/ui/form-style-all.scss';
