footer-form-validate

--- a/src/sass/ui/form-style-all.scss
+++ b/src/sass/ui/form-style-all.scss
@@ -1,6 +1,7 @@
 @use '/src/sass/base/variables.scss'as *;
 
-.touch {
+.touch,
+.footer {
     .just-validate-error-field {
         border: none;
         outline: 1px solid $ui-error;
