--- a/src/sass/ui/form-style-all.scss
+++ b/src/sass/ui/form-style-all.scss
@@ -6,4 +6,9 @@
         border: none;
         outline: 1px solid $ui-error;
     }
+
+    .just-validate-error-label {
+        margin-top: 10px;
+    }
+
 }
