--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -1,15 +1,19 @@
 .promo {
     padding-top: 50px;
     position: relative;
+
     &__wrapper {
         margin-block-start: 50px;
     }
+
     &__title {
         padding-inline: 5px;
     }
+
     &__cta {
         margin-top: 40px;
     }
+
     &__img {
         margin: 0 auto;
         width: 270px;
@@ -20,6 +24,7 @@
     &__btn {
         margin: 18px auto 0 auto;
     }
+
     &__potter {
         display: none;
     }
@@ -32,20 +37,23 @@
             display: flex;
             justify-content: space-between;
         }
+
         &__cta {
             margin-top: 0;
         }
+
         &__img {
             width: 230px;
             height: 321px;
         }
+
         &__title {
             padding-inline: 0;
             padding-top: 250px;
             padding-left: 71px;
             text-align: left !important;
         }
-    } 
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -59,9 +67,15 @@
             height: 633px;
             object-fit: cover;
         }
+
         &__title {
             padding-left: 571px;
             text-align: left !important;
+        }
+
+        &__cta {
+            animation-name: slideIn;
+            animation-duration: 3s;
         }
     }
 }
@@ -69,20 +83,25 @@
 @media screen and (min-width: 1920px) {
     .promo {
         padding-top: 40px;
+
         &__wrapper {
             margin-top: 79px;
         }
+
         &__img {
             width: 330px;
             height: 460px;
         }
+
         &__btn {
             margin: 50px auto 0 auto;
         }
+
         &__title {
             padding-top: 384px;
             padding-left: 642px;
         }
+
         &__potter {
             height: 900px;
         }
