--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,3 +17,4 @@
 @use "/src/sass/blocks/about.scss";
 @use '/src/sass/blocks/findus.scss';
 @use '/src/sass/ui/form-style-all.scss';
+@use '/src/sass/base/animations.scss';
