--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,6 @@
 @use '/src/sass/libs/modern-normalize.min.css';
 @use '/src/sass/libs/fontello.css';
-@use '/src/sass/base/variables.scss'as *;
+@use '/src/sass/base/variables.scss';
 // @use '/src/sass/pxtorem.scss' as *;
 @use '/src/sass/base/basic.scss';
 @use '/src/sass/blocks/promo.scss';
